Workbench: "Not enough texture slots!" Message being spammed and lags the entire computer #77759
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#77759
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14
Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash:
211b6c29f7
Worked: (newest version of Blender that worked as expected)
Short description of error
I had a file of a game scene made in 2.82 and it worked perfectly fine. But when I open the very same file in 2.83
it spammed this message when the big mesh was being rendered in viewport. The whole program lags to the point of unusability. I have to the
.blend
file with 2.82, disable texture display and re-open with 2.83Exact steps for others to reproduce the error
Added subscriber: @WOAS
#75337 was marked as duplicate of this issue
#77779 was marked as duplicate of this issue
Added subscriber: @mano-wii
This message is common.
It indicates that you have exceeded the texture limits supported by your GPU in the shader/material.
But it is strange that this message does not appear with the same file in 2.82.
Anyway, it seems like a bug spamming it so often.
This can actually cause lag.
To make it clear, can you confirm that this message does not spamming in blender 2.82?
yes, I opened the same exact file in 2.82 and it didn't lag at all
But does the message appear at least once?
strangely, not. It didn't appear at all.
Changed status from 'Needs Triage' to: 'Confirmed'
Added subscriber: @Pavel_Blend
Added subscriber: @Interference
I'm getting this same spam but, to my knowledge, I'm not exceeding texture slot usage on any materials. The warning message about this is of very little help as it doesn't tell you what materials supposedly have too many textures, just that something does.
The slow-down renders solid / texture view virtually unusable. And, strangely, it scrambles the textures too: certain objects will show completely different textures to what they're meant to. Deleting materials or hiding / deleting objects even seems to change which textures are being shown, which sounds suspiciously like a memory leak. This only happens in solid / texture view: switch to material preview or rendered and things display correctly.
Hey yeah, this doesn't lag in Preview/Render views at all! And everything else you said is the same for me too
Added subscriber: @EAW
Could you run blender_debug_gpu.cmd using both 2.82a and 2.83, and then upload the files that are created when you close Blender please?
Done. Hope this helps narrow things down. In my test for this, I opened the exact same file in both versions, a house model I use for lighting tests. The view defaulted to Solid mode, I rotated the camera a bit, then quit.debug_logs.zip
Note the debug file for 2.83 is considerably larger than its 2.82a counterpart due to the sheer number of error messages the issue generates.
Added subscriber: @SotirisKouvopoulos
I am having the same issues with 2.83 in a file the works as expected in 2.82. I can also add that when, for example, I hide all objects except one, this one is textured correctly in solid mode. As more objects are becoming visible there comes a moment when things brake. In my case about 60 objects.
Added subscriber: @fclem
Changed status from 'Confirmed' to: 'Needs User Info'
We need a simple file to reproduce the issue.
I agree the message is of little help. I'll improve it.
That said I don't understand what the report is aimed at. At the slowness? (in this case does it happen without a terminal opened?) or the fact the same shaders worked in 2.82 but not 2.83?
gm_bigcity.blend
Whether console is enabled or not, it is almost impossible to use blender with
texture
color type insolid
viewport shading mode.I'll see if I can put together something to reproduce this issue.
As for the purpose of the report itself, I didn't open it personally but my specific issues are:
If I had to pick one specific issue it's definitely Solid View becoming extremely unstable / laggy.
Oh, @WOAS beat me to the punch with a file. Nice. If more are needed, let me know and I'll dig something up.
I am uploading the file where I encountered this message - behaviour. I stripped it down (deleted hundreds of objects to reduce size) to absolutely essentials for the behavior to take place. That is, more than 60 objects, each one with a unique material and texture. As you switch between solid and material preview shading you can notice some corrupt textures at the top left corner (top view).
With few objects like the file uploaded, lag is not a problem. The same file that has originally 1600 objects, with almost 1500 unique materials and textures is unusable.
Everything works as expected in material preview mode.
The problem is that solid shading, with texture as color is unusable, because a) of speed (in big scenes) b) of wrong - random texture placement.
Sorry for not reproducing from a clean file, I hope I can do when I have more time.
ANO_MERA_bug.blend
Changed status from 'Needs User Info' to: 'Confirmed'
Added subscriber: @Jeroen-Bakker
Ok I can reproduce. This is likely caused by the workbench refactor.
The issue has been fixed in 2.90 due to other refactors but they cannot be backported to 2.83 LTS.
@Jeroen-Bakker I think we have to work on a fix in the LTS branch.
"Not enough texture slots!" Message being spammed and lags the entire computerto Workbench: "Not enough texture slots!" Message being spammed and lags the entire computer@Jeroen-Bakker I have this quick hack that solves the issue. P1491
Feel free to test/modify/commit.
Added subscribers: @MartinWitalinski, @iss, @lichtwerk
Added subscriber: @scaled
This issue was referenced by
061869fe61
Changed status from 'Confirmed' to: 'Resolved'