Fix T77759: "Not enough texture slots!" Message lags computer

Patch supplied by Clément Foucault